prevent clicks on elements while loading spinner is still visible

--- a/src/styles/webc-spinner/webc-spinner.scss
+++ b/src/styles/webc-spinner/webc-spinner.scss
@@ -16,7 +16,7 @@ webc-spinner {
 
   position: absolute;
   top: 0; right: 0; bottom: 0; left: 0;
-  pointer-events: none;
+  pointer-events: all;
   display: flex;
   justify-content: center;
   align-items: center;
